--- a/source/popup/popup.css
+++ b/source/popup/popup.css
@@ -11,10 +11,17 @@
 /* Global */
 
 body {
-  background-color: #9BCB58;
   font-family: Montserrat;
   padding: 0;
   margin: 0;
+}
+
+body.on {
+  background-color: #9BCB58;
+}
+
+body.off {
+  background-color: #e44;
 }
 
 .branding {
@@ -29,6 +36,7 @@ body {
   font-size: 1.5em;
   text-align: center;
 }
+
 
 .content {
   width: 25em;
@@ -47,7 +55,7 @@ body {
   display: table;
 
   font-size: 1.2em;
-  color: #070;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .container.toggle .label {
@@ -139,15 +147,15 @@ body {
   transition: .4s;
 }
 
-input:checked + .slider {
+#toggle:checked + .slider {
   background-color: #2196F3;
 }
 
-input:focus + .slider {
+#toggle:focus + .slider {
   box-shadow: 0 0 1px #2196F3;
 }
 
-input:checked + .slider:before {
+#toggle:checked + .slider:before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
