--- a/source/assets/info.css
+++ b/source/assets/info.css
@@ -14,11 +14,15 @@ body {
   background-color: #9BCB58;
   font-family: Montserrat;
   text-align: center;
-  margin: 6em;
+  margin: 3em 4.5em;
   font-size: 150%;
 }
 
 footer {
   margin-top: 200px;
-  font-size: 70%;
+  font-size: 60%;
+}
+
+footer a {
+  color: #000;
 }
