[WIP] Add text editor

--- a/source/popup/popup.css
+++ b/source/popup/popup.css
@@ -188,3 +188,11 @@ body.off {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.settings.editor{
+  display:none;
+  text-align: center;
+}
+.settings.editor form {
+  text-align: center;
+}
