redirects options as textarea

--- a/source/options/options.css
+++ b/source/options/options.css
@@ -36,8 +36,10 @@ body {
 
 #redirects-text {
   width: 30em;
+  height: 20em;
 
   overflow: scroll;
+  resize: none;
   outline: none;
   white-space: pre;
 
